<resources>
    <string name="app_name">Android App Components - Activities, Broadcast Receivers, Services and Content Providers</string>
    <string name="textView">TextView</string>
    <string name="content_provider">Content Provider</string>
    <string name="services">Services</string>
    <string name="broadcast_receiver">Broadcast Receiver</string>
    <string name="activity">Activity</string>
    <string name="activityDef">An activity represents a single screen
                               with a user interface just like this window </string>
    <string name="play_music">Play Music</string>
    <string name="stop_music">Stop Music</string>
    <string name="add_new_contact">ADD NEW CONTACT</string>
    <string name="contact_id">Contact ID</string>
    <string name="save">SAVE</string>
    <string name="delete_contact">DELETE CONTACT</string>
    <string name="delete">DELETE</string>
    <string name="contact_info">CONTACT INFO</string>
    <string name="add_contact">Add Contact</string>
    <string name="hello_world">Hello World…</string>
    <string name="update_contact">UPDATE CONTACT</string>
    <string name="name">NAME</string>
    <string name="email">EMAIL</string>
    <string name="update">UPDATE</string>
    <string name="view_contact">View Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="web_service">Web Service</string>
    <string name="download_image_activity">DownLoadImageActivity</string>
    <string name="download_image">Download Image</string>
    <string name="defaultURL">https://upload.wikimedia.org/wikipedia/commons/3/3e/Android_logo_2019.png</string>
    <string name="hintprompt">Please touch the floating action button to add a URL</string>
    <string name="enter_url">Enter URL (or press enter for default)</string>
    <string name="downloading">Downloading…</string>
    <string name="ok_button">OK</string>
</resources>