<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:layout_margin="40sp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_info"
        android:textSize="40sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/colorPrimary"/>

    <Button
        android:id="@+id/btn_add_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:text="@string/add_contact"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_view_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60sp"
        android:text="@string/view_contact"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btn_update_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60sp"
        android:text="@string/edit_contact"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_delete_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_contact"
        android:textSize="25sp"
        android:layout_marginTop="60sp"/>

</LinearLayout>